Centralizando quote e removendo 0's

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
   <body>
     <div id="container">
       <div id="clock">
-        <span id="hours" class="digit">00</span>
+        <span id="hours" class="digit"></span>
         <span>:</span>
-        <span id="minutes" class="digit">00</span>
+        <span id="minutes" class="digit"></span>
         <span>:</span>
-        <span id="seconds" class="digit">00</span>
+        <span id="seconds" class="digit"></span>
         <span> </span>
         <span id="ampm" class="digit"></span>
       </div>
